--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <%- include('../partials/head'); %>
-</head>
-<body class="container">
-
-<header>
-    <%- include('../partials/header'); %>
-</header>
-
-<main>
-    <div class="jumbotron">
-        <h1>I'm on the Index Page.</h1>
-        <p>Welcome to templating using EJS</p>
-    </div>
-</main>
-
-<footer>
-    <%- include('../partials/footer'); %>
-</footer>
-
-</body>
+    <head>
+        <%- include('../partials/head'); %>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="assets/bundle.js"></script>
+        <link rel="stylesheet" href="assets/bundle.css">
+    </body>
 </html>
