--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,4 @@
 <meta charset="UTF-8">
-<title>APP Name</title>
-
-<!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Image Search</title>
