--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -120,3 +120,12 @@ body,
     display: inline-block;
     padding: 0 10px;
 }
+.loader {
+    width: 100%;
+    text-align: center;
+    margin: 50px 0;
+}
+.loader img {
+    width: 300px;
+    height: 300px;
+}
