change app_name to app_title

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
 <% } %>
 <link rel="manifest" href="<%= process.env.APP_PUBLIC_URL %>/manifest.json" />
 
-<title><%= process.env.APP_NAME %></title>
+<title><%= process.env.APP_TITLE %></title>
 <% for(let i = 0; i < assets.css.length; i++){ %>
     <link href="<%= process.env.APP_PUBLIC_URL %>/<%= assets.css[i] %>" rel="stylesheet" />
 <% } %>
